fix color logo bg and text align video player

--- a/css/header/header.css
+++ b/css/header/header.css
@@ -12,15 +12,9 @@
   text-align: center;
   padding: 12px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 25px;
   line-height: 25px;
   border-radius: 4px;
-}
-
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-.header a.logo {
-  padding: 0px;
-  font-weight: bold;
 }
 
 /* Change the background color on mouse-over */
@@ -49,4 +43,5 @@
 .header img {
   width : 50px;
   height : 50px;
+  padding: 0px;
 }
