--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+html { 
+    background: url(assets/background.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+/*h1{text-shadow:0 4px 0 #00ecff, 0 -4px 0 #ff4045;}*/
+
 h1 {
     font-size: 3em;
     font-weight: bold;
@@ -9,17 +19,7 @@ h2 {
     font-weight: bold;
 }
 
-.trailer {
-    text-align: center;
-}
-
-.download {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-.description p {
+.index {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -28,6 +28,10 @@ h2 {
     padding: 10px;
     font-size: 1.5em;
     text-align: left;
+}
+
+.download {
+    text-align: center;
 }
 
 .team > ul {
